stages/stage4/k8s/gateway/02-httproute-identity.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: identity
  namespace: apollo-airlines-apps
spec:
  parentRefs:
    - name: apollo-gateway
  hostnames: ["identity.apollo.local"]
  rules:
    - backendRefs:
        - name: identity
          port: 8080
